deleting and bringing index page to the the root directory

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
             </div>
             <ul class="nav-list">
                 <span id="togglemenu-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="21"><g fill="#D0D6F9" fill-rule="evenodd"><path d="M0 0h24v3H0zM0 9h24v3H0zM0 18h24v3H0z"/></g></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="21">
+                        <g fill="#D0D6F9" fill-rule="evenodd"><path d="M0 0h24v3H0zM0 9h24v3H0zM0 18h24v3H0z" /></g>
+                    </svg>
                 </span>
-                <li class="togglemenu"><a href="">00 Home</a></li>
-                <li class="togglemenu"><a href="">01 Destination</a></li>
+                <li class="togglemenu"><a href="#">00 Home</a></li>
+                <li class="togglemenu"><a href="/starter-code/destination-moon.html">01 Destination</a></li>
                 <li class="togglemenu"><a href="">02 Crew</a></li>
                 <li class="togglemenu"><a href="">03 Technology</a></li>
             </ul>
@@ -41,6 +43,6 @@
                 <h1 class="explore-text">EXPLORE</h1>
             </div>
         </section>
-        <script src="script.js"></script>
+        <script src="/starter-code/script.js"></script>
     </body>
 </html>
