working on my page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="icon" type="image/png" sizes="32x32" href="/starter-code/assets/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="./starter-code/assets/favicon-32x32.png" />
         <title>Space tourism website</title>
-        <link rel="stylesheet" href="/styles/styles.css" />
+        <link rel="stylesheet" href="./styles/styles.css" />
     </head>
     <body>
         <nav>
@@ -25,7 +25,7 @@
                     </svg>
                 </span>
                 <li class="togglemenu"><a href="#">00 Home</a></li>
-                <li class="togglemenu"><a href="/starter-code/destination-moon.html">01 Destination</a></li>
+                <li class="togglemenu"><a href="./starter-code/destination-moon.html">01 Destination</a></li>
                 <li class="togglemenu"><a href="">02 Crew</a></li>
                 <li class="togglemenu"><a href="">03 Technology</a></li>
             </ul>
@@ -43,6 +43,6 @@
                 <h1 class="explore-text">EXPLORE</h1>
             </div>
         </section>
-        <script src="/starter-code/script.js"></script>
+        <script src="./starter-code/script.js"></script>
     </body>
 </html>
