positioning my css code well

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <link rel="icon" type="image/png" sizes="32x32" href="./starter-code/assets/favicon-32x32.png" />
         <title>Space tourism website</title>
-        <link rel="stylesheet" href="../styles/styles.css" />
+        <link rel="stylesheet" href="/styles/styles.css" />
     </head>
     <body>
         <nav>
