--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </svg>
                 </span>
                 <li class="togglemenu"><a href="#">00 Home</a></li>
-                <li class="togglemenu"><a href="/starter-code/destination-moon.html">01 Destination</a></li>
+                <li class="togglemenu"><a href="./starter-code/destination-moon.html">01 Destination</a></li>
                 <li class="togglemenu"><a href="">02 Crew</a></li>
                 <li class="togglemenu"><a href="">03 Technology</a></li>
             </ul>
